# octaverse

./: .gitignore  MEMORY.md  MISTAKE.md  README.md  SUMMARY.md  USAGE.md  agent.sh  octaverse.sh  orchestrator.json  pyproject.toml  runner.sh  sync.sh
conf/: octaverse.conf
epics/epic-001/: epic.json  events.ndjson
epics/epic-001/tasks/: task-001.json  task-002.json  task-003.json  task-004.json  task-005.json
orchestrator/: README.md  agent_runner.py  config.py  core.py  state.py
shared/: conventions.md  task_SPEC.yml
