[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octaverse"
version = "0.1.0"
description = "AI Orchestration CLI Tool - Parallel execution with Claude Code CLI or Codex CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Octaverse Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
octaverse = "orchestrator:main"

[project.urls]
Homepage = "https://github.com/octaverse/octaverse"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.hatch.build.targets.sdist]
include = [
    "/orchestrator",
]
